Update bg image url

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ nav {
 /* Main Section */
 
 .main-section {
-    background-image: url('/assets/bg.png');
+    background-image: url('../assets/bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 126%;
